<resources>
    <string name="app_name">Food Runner</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_now">Don\'t have an account?Signup now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="mobile_hint">Mobile Number(10 digits)</string>
    <string name="foodrunner">FoodRunner</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name_register">Name(Min. 3 characters)</string>
    <string name="details">Account Details</string>
    <string name="text">Enter your registered mobile number and email below</string>
    <string name="preferences">Users Preferences</string>
    <string name="address">DELIVERY ADDRESS:Rahul house,Kakkanad po,Ernakulam</string>
    <string name="email">EMAIL ADDRESS :rahul123@gmail.com</string>
    <string name="mobile">MOBILE NUMBER :0123456789</string>
    <string name="name">NAME :Rahul</string>
</resources>
