<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff5252"
    tools:context=".LogInActivity">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/logo_main"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/phn_drawable"
        android:drawablePadding="2dp"
        android:hint="@string/mobile_hint"
        android:layout_below="@id/imgLogo"
        android:inputType="phone"
        android:maxLength="10"/>
    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_marginHorizontal="30dp"
        android:drawableLeft="@drawable/key_drwable"
        android:drawablePadding="2dp"
        android:hint="@string/password"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/etMobile"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/dark"
        android:backgroundTintMode="multiply"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etPass"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:layout_below="@id/btnLogIn"/>
    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_now"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textColor="#ffffff"
        android:textStyle="normal"/>



</RelativeLayout>