<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details"
    android:background="#ff5252">
    <TextView
        android:id="@+id/txtHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="25dp"
        android:textSize="20sp"
        android:text="Account Details"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"/>
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@id/txtHeading"/>
    <TextView
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/mobile"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@id/txtName"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/email"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@id/txtMobile"/>
    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/address"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@id/txtEmail"/>
</RelativeLayout>